# ClusteredOrbit_3

./: .gitignore  LongPositionSimulator.sln
LongPositionSimulator/: .gitignore  BasicPuppetMaster.cpp  BasicPuppetMaster.h  CMakeLists.txt  Canvas.cpp  Collission.h  LongPositionSimulator.cpp  LongPositionSimulator.vcxproj  LongPositionSimulator.vcxproj.filters  MagicMissile.cpp  MissileGuidance.cpp  ObjectMetaInfo.cpp  ObjectMetaInfo.h  PlayerState.cpp  PlayerState.h  PointDefenseAI.cpp  SpaceObject.cpp  SpaceObject.h  Updateable.h  WorldState.cpp  WorldStateEventHandler.cpp  WorldStateEventHandler.h  linearInterceptEquation.cpp  packages.config  polynomPower4.cpp  positionable.cpp  positionable.h  rebuild.sh  roadmap.txt  shipIds.h  test_main.cpp  vel3d.cpp  vel3d.h
LongPositionSimulator/include/: BasicPuppetMaster.h  Canvas.h  Collission.h  MagicMissile.h  MissileGuidance.h  ObjectMetaInfo.h  PointDefenseAI.h  RouterPlanner.h  SpaceObject.h  WorldState.h  linearInterceptEquation.h  polynomPower4.h  positionable.h  vel3d.h
LongPositionSimulator/src/: BasicPuppetMaster.cpp  Canvas.cpp  Collission.test.cpp  LongPositionSimulator.cpp  MagicMissile.cpp  MissileGuidance.cpp  ObjectMetaInfo.cpp  PlayerState.cpp  PointDefenseAI.cpp  SpaceObject.cpp  Updateable.cpp  WorldState.cpp  WorldStateEventHandler.cpp  linearInterceptEquation.cpp  polynomPower4.cpp  polynomPower4.test.cpp  positionable.cpp  positionable.test.cpp  test_positionable.cpp  vel3d.cpp
LongPositionSimulator/tests/: CMakeLists.txt  test_main.cpp
